<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/numberFiled"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="@dimen/padding_textView"
        android:textColor="#D806BC"
        android:textSize="@dimen/textViewTextSize"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/linear_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_C"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_C"
            android:textColor="#E87A7A" />

        <Button
            android:id="@+id/button_brackets"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_brackets" />

        <Button
            android:id="@+id/button_percent"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_percent" />

        <Button
            android:id="@+id/button_division"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/button_division" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_seven"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_seven" />

        <Button
            android:id="@+id/button_eight"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_eight" />

        <Button
            android:id="@+id/button_nine"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_nine" />

        <Button
            android:id="@+id/button_multiplication"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/button_multiplication" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_four"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_four" />

        <Button
            android:id="@+id/button_five"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_five" />

        <Button
            android:id="@+id/button_six"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_six" />


        <Button
            android:id="@+id/button_subtraction"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/button_subtraction" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_one"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_one"/>

        <Button
            android:id="@+id/button_two"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_two" />

        <Button
            android:id="@+id/button_three"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_three" />

        <Button
            android:id="@+id/button_addition"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/button_addition" />
    </LinearLayout>

    <LinearLayout
        style="@style/linear_layout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_zero"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/button_zero" />

        <Button
            android:id="@+id/button_dot"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_dot" />

        <Button
            android:id="@+id/button_equal"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/button_equal" />

    </LinearLayout>

</LinearLayout>

