<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/padding">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text"
        android:ems="30"
        android:textColorHint="@color/purple_200"
        android:textColor="@color/first_edit_text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_hw_button"
        android:textColor="@color/first_button"
        android:textFontWeight="@android:integer/config_longAnimTime"
        />

   <Switch
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:switchPadding="@dimen/first_switch"/>

<CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/first_checkbox"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/first_toggleButton"/>

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>